kubernetes-manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: boutique
spec:
  hosts:
  - "*"
  gateways:
  - boutique-gateway
  http:
  - match:
    - uri:
        prefix: /cart
    route:
    - destination:
        host: cartservice
        port:
          number: 7070

  - match:
    - uri:
        prefix: /checkout
    route:
    - destination:
        host: checkoutservice
        port:
          number: 5050

  - match:
    - uri:
        prefix: /productcatalog
    route:
    - destination:
        host: productcatalogservice
        port:
          number: 3550

  - match:
    - uri:
        prefix: /currency
    route:
    - destination:
        host: currencyservice
        port:
          number: 7000

  - match:
    - uri:
        prefix: /email
    route:
    - destination:
        host: emailservice
        port:
          number: 5000

  - match:
    - uri:
        prefix: /shipping
    route:
    - destination:
        host: shippingservice
        port:
          number: 50051

  - match:
    - uri:
        prefix: /payment
    route:
    - destination:
        host: paymentservice
        port:
          number: 50051

  - match:
    - uri:
        prefix: /recommendation
    route:
    - destination:
        host: recommendationservice
        port:
          number: 8080

  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 80
